[package]
name = "opencv_window_show"
version = "0.1.0"
authors = ["Humi@bass_clef_ <bassclef.nico@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dxcapture/mat"]

[dependencies]
opencv = "0.63"

[dependencies.dxcapture]
path = "../../../dxcapture"
